--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,6 @@ body{
     /* border: 10px solid brown; */
     /* height: 200px; */
     background-size: cover;
- background-image: url("./images/1489194.jpg");
+ /* background-image: url("./images/1489194.jpg"); */
  /* background-color: #e90000; */
 }
