--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,25 @@
   padding: 0;
 }
 body {
+  /* background-image: url('./images/vecteezy_traveling-at-the-speed-of-light-3d-illustration-background_1271668.jpg'); */
+  /* background-image: url("./images/1489194.jpg"); */
+  /* background-image: url("./images/1489205.jpg"); */
+  /* background-image: url("./images/1534541.jpg"); */
+  /* background-image: url("./images/4051377.jpg"); */
+  /* background-image: url("./images/5457417.jpg"); */
+  /* background-image: url("./images/862222.jpg"); */
+  /* background-image: url("./images/862226.jpg"); */
+  background-image: url("./images/862449.jpg");
+  /* background-image: url("./images/vecteezy_black-background-concept_.jpg"); */
+  /* background-repeat: repeat repeat; */
+  height:100vh;
+  /* border: 5px solid red; */
+  background-size: contain;
   
-  /* height:100%; */
-  border: 5px solid red;
   
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
