--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,13 @@
 .Navbar{
-    border: 3px solid black;
+    /* border: 3px solid black; */
     display: flex;
     flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.Nadiv2{
+    display: flex;
+    flex-direction: row;
+    /* border: 2px solid black; */
 }
