--- a/src/components/Togglecurrency.css
+++ b/src/components/Togglecurrency.css
@@ -1,11 +1,15 @@
 button{
-    border: 2px solid red;
+    /* border: 2px solid red; */
     margin: 2px;
+    padding: 2px;
+    border-radius: 5px;
+    border: none;
 
 }
 button:hover {     
-    background-color:yellow;    
+    background-color:rgb(0, 0, 0);  
+    color: white;  
 }
-button:active {     
+/* button:active {     
     background-color:green;    
-}
+} */
