--- a/src/components/TrackPrice/TrackPrice.css
+++ b/src/components/TrackPrice/TrackPrice.css
@@ -14,14 +14,16 @@ input{
     height: 1.5em;
     outline: none;
     font-size: large;
-    padding-left:0.3em;
+    padding-left:0.5em;
     margin-bottom: 0.6em;
+    border-radius: 10px;
+    border: none;
 }
 
 th{
     /* border: 5px solid black; */
     border-style: none solid solid solid;
-    box-shadow: -1px -2px 20px  rgb(255, 255, 255);
+    box-shadow: -1px -2px 10px  rgb(255, 255, 255);
     /* background-color: rgb(0, 0, 0); */
     color: rgb(255, 255, 255);
     height: 2em;
@@ -34,6 +36,8 @@ td{
     text-align: center;
     padding: 5px 0 5px 0;
 }
+
+
 
 td img{
     height: 3em;
