--- a/src/components/Coininfo.css
+++ b/src/components/Coininfo.css
@@ -1,16 +1,13 @@
 .chartbtnloadetc{
     display: flex;
     flex-direction:'row' ;
-    border: 4px solid green;
-    /* background-color: rgb(24, 122, 135); */
-    /* justify-content: center; */
-    /* align-items: center; */
     width: 90%;
-    margin: auto;  
+    border-top:5px solid  rgba(185, 179, 179, 0.909);
+    padding-top: 2em;
+    /* border: 2px solid green; */
+    margin: auto; 
+    margin-top: 2em; 
 }
-/* .chartbtnloadetc div{
-    border:6px solid blue;
-} */
 
 select{
     height: 30px;
@@ -35,15 +32,28 @@ option{
 margin: auto;
 }
 
+@media only screen and (max-width: 600px) {
 
+    select{
+        height: 20px;
+       font-size: smaller;
+        
+    }
+    option{
+        font-size: smaller;
+    
+    }
+
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   
     .chartbtnloadetc{
-        
         width: 60%; 
-        border-left:2px solid black ;
+        border-left:5px solid  rgba(185, 179, 179, 0.909); 
+        padding-left: 2em;
+        border-top: none;
     }
     
 }
