--- a/src/components/TrackPrice/TrackPrice.css
+++ b/src/components/TrackPrice/TrackPrice.css
@@ -57,3 +57,44 @@ table {
     justify-content: center;
     margin: 1.5em;
   }
+
+
+
+
+
+
+  @media only screen and (max-width: 600px) {
+    input{
+        height: 1.3em;
+        font-size:small;
+    }
+
+    th{
+        height: 1.5em;
+        font-size:small;
+    }
+    td img{
+        height: 2em;
+    }
+
+    td{
+        font-size: small;
+    }
+
+    .pagination{
+        margin: 1em;
+        font-size:14px;
+      }
+  }
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
